# arduino-iot-cloud-py

./: LICENSE  MANIFEST.in  README.md  aiotcloud.py  aiotcloud_example.py  example.py  package.json  pyproject.toml  setup.py  umqtt_tls.py
.github/workflows/: changelog.json  check-commits.yml  client-test.yml  python-linter.yml  python-package.yml
aiotcloud/: __init__.py  ntptime.py  ucloud.py  umqtt.py  ussl.py
arduino_iot_cloud/: __init__.py  ucloud.py  umqtt.py  ussl.py
examples/: example.py  micropython.py  micropython_advanced.py  micropython_async_wifi.py  micropython_basic.py
src/arduino_iot_cloud/: __init__.py  ucloud.py  umqtt.py  ussl.py
tests/: ci.py  ci.sh
